Name:          crucible-saw
Version:       0.1
Author:        Galois Inc.
Maintainer:    rdockins@galois.com
License:       BSD3
License-file:  LICENSE
Build-type:    Simple
Cabal-version: >= 1.9.2
Category:      Language
Synopsis:      Crucible bindings to SAW
Description:
  This package provides a Crucible solver backend that produces
  SAWCore terms.

library
  build-depends:
    base >= 4.7 && < 4.15,
    containers,
    crucible >= 0.1,
    what4 >= 0.4,
    lens,
    text,
    parameterized-utils,
    saw-core >= 0.1

  hs-source-dirs: src

  exposed-modules:
    Lang.Crucible.Backend.SAWCore
--    Lang.Crucible.Solver.ExtractSAWCore

  ghc-options: -Wall -Werror=incomplete-patterns -Werror=missing-methods -Werror=overlapping-patterns
  ghc-prof-options: -O2 -fprof-auto-top
