Name:          crucible-server
Version:       0.1
Author:        Galois Inc.
Maintainer:    bjones@galois.com
Build-type:    Custom
License:       BSD3
License-file:  LICENSE
Cabal-version: >= 1.9.2
Category:      Language
Synopsis:      IPC server designed for interlanguage Crucible support
Description:
  The Crucible server provides a host-language-agnostic interface to a
  subset of the Crucible library functionality.  This API is exposed via
  protocol buffer messages.

extra-source-files:
  proto/crucible.proto

library
  build-depends:
    ansi-wl-pprint,
    base >= 4.7,
    bytestring >= 0.10.2,
    containers,
    crucible >= 0.1,
    crucible-abc,
    crucible-saw,
    galois-matlab,
    hashable,
    hashtables,
    hpb >= 0.1.1,
    lens,
    mtl,
    parameterized-utils >= 0.1.7,
    saw-core,
    text,
    transformers,
    vector

  hs-source-dirs: src

  build-tools:
    hpb

  exposed-modules:
    Lang.Crucible.Proto
    Lang.Crucible.Server.CallbackOutputHandle
    Lang.Crucible.Server.Encoding
    Lang.Crucible.Server.MultipartOperations
    Lang.Crucible.Server.Requests
    Lang.Crucible.Server.SAWOverrides
    Lang.Crucible.Server.SimpleOverrides
    Lang.Crucible.Server.Simulator
    Lang.Crucible.Server.Translation
    Lang.Crucible.Server.TypeConv
    Lang.Crucible.Server.ValueConv

  ghc-options: -Wall
  ghc-prof-options: -O2 -fprof-auto-top


executable crucible-server
  build-depends:
    ansi-wl-pprint,
    base >= 4.7 && < 4.10,
    crucible,
    crucible-abc,
    crucible-saw,
    crucible-server,
    hpb >= 0.1.1,
    lens,
    parameterized-utils >= 0.1.7,
    saw-core,
    text

  ghc-options: -Wall

  main-is: Main_crucible.hs
  hs-source-dirs:
    crucible-server
