Name:          crucible-server
Version:       0.1
Author:        Galois Inc.
Maintainer:    rdockins@galois.com
Build-type:    Custom
License:       BSD3
License-file:  LICENSE
Cabal-version: >= 1.9.2
Category:      Language
Synopsis:      IPC server designed for interlanguage Crucible support
Description:
  The Crucible server provides a host-language-agnostic interface to a
  subset of the Crucible library functionality.  This API is exposed via
  protocol buffer messages.

extra-source-files:
  proto/crucible.proto

custom-setup
  setup-depends:
    base >= 4.7 && < 5,
    Cabal >= 1.24,
    directory,
    filepath,
    process

library
  build-depends:
    abcBridge,
    ansi-wl-pprint,
    base >= 4.7,
    bv-sized >= 1.0.0,
    bytestring >= 0.10.2,
    containers,
    what4,
    what4-abc,
    crucible >= 0.1,
    crucible-saw,
    cryptol,
    cryptol-verifier,
    directory,
    exceptions,
    executable-path,
    filepath,
    GraphSCC,
    hashable,
    hashtables,
    hpb >= 0.1.1,
    lens,
    mtl,
    parameterized-utils >= 0.1.7,
    saw-core,
    saw-core-sbv,
    sbv,
    text,
    transformers,
    vector

  hs-source-dirs: src

  build-tools:
    hpb

  exposed-modules:
    Lang.Crucible.Proto
    Lang.Crucible.Server.CallbackOutputHandle
    Lang.Crucible.Server.CryptolEnv
    Lang.Crucible.Server.Encoding
    Lang.Crucible.Server.MultipartOperations
    Lang.Crucible.Server.Requests
    Lang.Crucible.Server.SAWOverrides
    Lang.Crucible.Server.SimpleOverrides
    Lang.Crucible.Server.Simulator
    Lang.Crucible.Server.Translation
    Lang.Crucible.Server.TypeConv
    Lang.Crucible.Server.TypedTerm
    Lang.Crucible.Server.ValueConv
    Lang.Crucible.Server.Verification.Harness
    Lang.Crucible.Server.Verification.Override

  ghc-options: -Wall -Werror=incomplete-patterns -Werror=missing-methods -Werror=overlapping-patterns
  ghc-prof-options: -O2 -fprof-auto-top


executable crucible-server
  build-depends:
    ansi-wl-pprint,
    base >= 4.7 && < 4.15,
    abcBridge,
    what4,
    what4-abc,
    crucible,
    crucible-saw,
    crucible-server,
    cryptol-verifier,
    hpb >= 0.1.1,
    lens,
    parameterized-utils >= 0.1.7,
    saw-core,
    text

  ghc-options: -Wall -Werror=incomplete-patterns -Werror=missing-methods -Werror=overlapping-patterns

  main-is: Main_crucible.hs
  hs-source-dirs:
    crucible-server
