Name:          crucible-syntax
Version:       0.1
Author:        Galois Inc.
Maintainer:    dtc@galois.com
Build-type:    Simple
License:       BSD3
License-file:  LICENSE
Cabal-version: >= 1.9.2
Category:      Language
Synopsis:      A syntax for reading and writing Crucible control-flow graphs
Description:
  This package provides a syntax for directly constructing Crucible
  control-flow graphs, as well as for observing them.

extra-source-files:

library
  build-depends:
    ansi-wl-pprint,
    base >= 4.7,
    bv-sized >= 1.0.0,
    bytestring >= 0.10.2,
    containers,
    crucible >= 0.1,
    executable-path,
    directory,
    filepath,
    GraphSCC,
    hashable,
    hashtables,
    lens,
    megaparsec,
    mtl,
    optparse-applicative,
    parameterized-utils >= 0.1.7,
    megaparsec >= 7.0 && < 8.0,
    s-cargot,
    text,
    transformers,
    vector,
    what4

  hs-source-dirs: src

  exposed-modules:
    Lang.Crucible.Syntax.Atoms
    Lang.Crucible.Syntax.Concrete
    Lang.Crucible.Syntax.SExpr
    Lang.Crucible.Syntax.Overrides
    Lang.Crucible.Syntax.Prog
    Lang.Crucible.Syntax.ExprParse

  ghc-options: -Wall -Werror=incomplete-patterns -Werror=missing-methods -Werror=overlapping-patterns
  ghc-prof-options: -O2 -fprof-auto-top


executable crucibler
  build-depends:
    ansi-wl-pprint,
    base >= 4.7 && < 4.15,
    crucible,
    crucible-syntax,
    lens,
    megaparsec,
    mtl,
    optparse-applicative,
    parameterized-utils >= 0.1.7,
    s-cargot,
    text,
    what4

  ghc-options: -Wall -Werror=incomplete-patterns -Werror=missing-methods -Werror=overlapping-patterns

  main-is: Main.hs
  hs-source-dirs:
    crucible-syntax


test-suite crucible-syntax-tests
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: test
  other-modules:
    Overrides
  build-depends:
    base,
    crucible,
    crucible-syntax,
    directory,
    filepath,
    lens,
    megaparsec,
    parameterized-utils,
    tasty,
    tasty-golden,
    tasty-hunit,
    text,
    what4

