Cabal-version: 2.2
Name:          crucible-wasm
Version:       0.2.1.0.99
Author:        Galois Inc.
Copyright:     (c) Galois, Inc. 2020-2022
Maintainer:    rdockins@galois.com
License:       BSD-3-Clause
License-file:  LICENSE
Build-type:    Simple
Category:      Language
Synopsis:      Support for translating and executing WebAssembly code in Crucible

extra-doc-files: CHANGELOG.md

common warns
  -- Specifying -Wall and -Werror can cause the project to fail to build on
  -- newer versions of GHC simply due to new warnings being added to -Wall. To
  -- prevent this from happening we manually list which warnings should be
  -- considered errors. We also list some warnings that are not in -Wall, though
  -- try to avoid "opinionated" warnings (though this judgement is clearly
  -- subjective).
  --
  -- Warnings are grouped by the GHC version that introduced them, and then
  -- alphabetically.
  --
  -- A list of warnings and the GHC version in which they were introduced is
  -- available here:
  -- https://ghc.gitlab.haskell.org/ghc/doc/users_guide/using-warnings.html

  -- Since GHC 9.6 or earlier:
  ghc-options:
    -Wall
    -Werror=ambiguous-fields
    -Werror=compat-unqualified-imports
    -Werror=deferred-type-errors
    -Werror=deprecated-flags
    -Werror=deprecations
    -Werror=deriving-defaults
    -Werror=deriving-typeable
    -Werror=dodgy-foreign-imports
    -Werror=duplicate-exports
    -Werror=empty-enumerations
    -Werror=gadt-mono-local-binds
    -Werror=identities
    -Werror=inaccessible-code
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=inline-rule-shadowing
    -Werror=misplaced-pragmas
    -Werror=missed-extra-shared-lib
    -Werror=missing-exported-signatures
    -Werror=missing-fields
    -Werror=missing-home-modules
    -Werror=missing-methods
    -Werror=missing-pattern-synonym-signatures
    -Werror=missing-signatures
    -Werror=name-shadowing
    -Werror=noncanonical-monad-instances
    -Werror=noncanonical-monoid-instances
    -Werror=operator-whitespace
    -Werror=operator-whitespace-ext-conflict
    -Werror=orphans
    -Werror=overflowed-literals
    -Werror=overlapping-patterns
    -Werror=partial-fields
    -Werror=partial-type-signatures
    -Werror=redundant-bang-patterns
    -Werror=redundant-record-wildcards
    -Werror=redundant-strictness-flags
    -Werror=simplifiable-class-constraints
    -Werror=star-binder
    -Werror=star-is-type
    -Werror=tabs
    -Werror=type-defaults
    -Werror=typed-holes
    -Werror=type-equality-out-of-scope
    -Werror=type-equality-requires-operators
    -Werror=unicode-bidirectional-format-characters
    -Werror=unrecognised-pragmas
    -Werror=unrecognised-warning-flags
    -Werror=unsupported-calling-conventions
    -Werror=unsupported-llvm-version
    -Werror=unused-do-bind
    -Werror=unused-imports
    -Werror=unused-record-wildcards
    -Werror=warnings-deprecations
    -Werror=wrong-do-bind

  if impl(ghc < 9.8)
    ghc-options:
      -Werror=forall-identifier

  if impl(ghc >= 9.8)
    ghc-options:
      -Werror=incomplete-export-warnings
      -Werror=inconsistent-flags

  if impl(ghc >= 9.10)
    ghc-options:
      -Werror=badly-staged-types
      -Werror=data-kinds-tc
      -Werror=deprecated-type-abstractions
      -Werror=incomplete-record-selectors

executable crucible-wasm

  hs-source-dirs: tool
  main-is: Main.hs

  build-depends:
    base >= 4 && < 5,
    crucible-wasm

  ghc-options: -Wall -Wcompat -Werror=incomplete-patterns -Werror=missing-methods -Werror=overlapping-patterns
  ghc-prof-options: -O2 -fprof-auto-top

  default-language: Haskell2010


library

  other-modules: Paths_crucible_wasm
  autogen-modules: Paths_crucible_wasm

  build-depends:
    base >= 4.13 && < 5,
    bv-sized >= 1.0.0,
    bytestring,
    containers,
    crucible,
    crucible-debug,
    crucible-llvm,
    crux,
    filepath,
    lens,
    mtl >= 2.1,
    panic >= 0.3,
    parameterized-utils >= 1.0 && < 2.2,
    prettyprinter >= 1.7.0 && < 1.8,
    text,
    transformers >= 0.3,
    what4 >= 0.4,
    wasm

  hs-source-dirs: src

  exposed-modules:
    Lang.Crucible.Wasm
    Lang.Crucible.Wasm.Extension
    Lang.Crucible.Wasm.Instantiate
    Lang.Crucible.Wasm.Main
    Lang.Crucible.Wasm.Memory
    Lang.Crucible.Wasm.Translate
    Lang.Crucible.Wasm.Utils
  other-modules:

  ghc-options: -Wall -Wcompat -Werror=incomplete-patterns -Werror=missing-methods -Werror=overlapping-patterns
  ghc-prof-options: -O2 -fprof-auto-top
  default-language: Haskell2010

test-suite crucible-wasm-test
  import: warns
  type: exitcode-stdio-1.0
  hs-source-dirs: test

  main-is: Test.hs

  build-depends:
    base,
    bytestring,
    crucible-wasm,
    crux,
    filepath,
    lens,
    tasty >= 0.10,
    tasty-hunit >= 0.10,
    tasty-sugar >= 2.0 && < 2.3,
    text,
